# family-office-ledger

./: .gitignore  AGENTS.md  PRD.md  README.md  alembic.ini  investment-accounting-ux-design-research.md  partnership-family-office-data-models-report.md  pyproject.toml
.omc/sessions/: 29e7d3fc-aadb-47a9-a0b3-352ba01bfe3b.json
.omc/state/checkpoints/: checkpoint-2026-01-31T05-19-16-464Z.json
.opencode/: package.json
.sisyphus/: boulder.json  ralph-loop.local.md
.sisyphus/drafts/: bank-ingestion-rules.md  reconciliation-workflow.md
.sisyphus/notepads/bank-ingestion-feature/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/notepads/reconciliation-workflow/: learnings.md
.sisyphus/plans/: bank-ingestion-feature.md  financial-features.md  ownership-graph-data-model.md  reconciliation-workflow.md
alembic/: AGENTS.md  env.py
docs/: AGENTS.md  FRONTEND_SPEC.md  architecture-diagrams.md
specs/: AGENTS.md  api_contracts.md  module_overview.md  project_overview.md  project_structure.md  setup_guide.md  tech_stack.md
src/family_office_ledger/: AGENTS.md  __init__.py  cli.py  config.py  container.py  exceptions.py  logging_config.py
src/family_office_ledger/api/: AGENTS.md  __init__.py  app.py  routes.py  schemas.py
src/family_office_ledger/cli/: AGENTS.md  __init__.py  _main.py  budget_commands.py  currency_commands.py  household_commands.py  qsbs_commands.py  reconciliation_commands.py
src/family_office_ledger/design_system/: AGENTS.md  __init__.py  components.py  themes.py  tokens.py
src/family_office_ledger/domain/: AGENTS.md  __init__.py  audit.py  auth.py  budgets.py  corporate_actions.py  crypto.py  documents.py  entities.py  exchange_rates.py  households.py  k1.py  ownership.py  (+7 more)
tests/: AGENTS.md  conftest.py  test_anomaly_detection_service.py  test_api.py  test_audit_service.py  test_auth_service.py  test_auth_service_todo.py  test_bank_parsers.py  test_budget_api.py  test_budget_cli.py  test_budget_repository.py  test_budget_service.py  test_budgets.py  test_cash_flow_projection_service.py  test_cli.py  test_corporate_action_service.py  test_corporate_actions_and_documents.py  test_currency.py  test_currency_api.py  test_currency_cli.py  test_currency_service.py  test_entities.py  test_error_deduplication.py  test_exchange_rate_repository.py  test_exchange_rates.py  test_expense_api.py  test_expense_category.py  test_expense_cli.py  test_expense_service.py  test_households_repository.py  test_ingestion_service.py  test_ledger_service.py  test_lot_matching_service.py  test_multicurrency_reports.py  test_ownership_graph.py  test_parsers.py  test_portfolio_analytics.py  test_qsbs_service.py  test_reconciliation_api.py  test_reconciliation_cli.py  (+18 more)
tests/api/: AGENTS.md  __init__.py  test_routes_module_structure.py
tests/cli/: AGENTS.md  __init__.py  test_cli_module_structure.py
tests/e2e/: AGENTS.md
tests/streamlit_app/: AGENTS.md  __init__.py  conftest.py  test_streamlit_api_client.py  test_streamlit_pages.py
tests/ui/: AGENTS.md  __init__.py  conftest.py  test_api_client.py  test_components.py  test_pages.py  test_workflows.py
(+75 files in other folders)
