[project]
name = "family-office-ledger"
version = "0.1.0"
description = "Double-entry, multi-entity accounting and investment ledger for family offices"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Family Office Team" }]
keywords = ["accounting", "ledger", "investments", "family-office", "tax-lots"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "psycopg2-binary>=2.9.11",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "pre-commit>=3.6.0",
    "httpx>=0.26.0",
    "types-psycopg2>=2.9.21",
]

# Optional Streamlit frontend (install with `family-office-ledger[frontend]`).
frontend = [
    "streamlit>=1.40.0",
    "httpx>=0.27",
    "plotly>=5.18",
    "pandas>=2.0",
]

[project.scripts]
fol = "family_office_ledger.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/family_office_ledger"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["streamlit", "streamlit.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*", "plotly", "plotly.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["family_office_ledger.streamlit_app.*"]
disallow_untyped_defs = false
warn_return_any = false

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["family_office_ledger"]

[tool.coverage.run]
source = ["src/family_office_ledger"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[dependency-groups]
dev = [
    "types-openpyxl>=3.1.5.20250919",
]

